feat: more css improvements, navigation updates

--- a/src/public/styles/styles.css
+++ b/src/public/styles/styles.css
@@ -1,4 +1,10 @@
+/* Internal imports */
+@import url("/styles/footer.css");
+@import url("/styles/inputs.css");
+@import url("/styles/navigation.css");
 @import url("/styles/tooltips.css");
+
+/* External imports */
 @import url("/styles/external/font-awesome.css");
 @import url("https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css");
 @import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@500;600;700&display=swap");
@@ -86,6 +92,15 @@ a {
         color: var(--link-color-hover);
         text-decoration: none;
     }
+
+    &.external-link::after {
+        padding-left: 3px;
+        content: "\f08e";
+        font-weight: bold;
+        font-size: calc(1em - 3px);
+        /* stylelint-disable-next-line font-family-no-missing-generic-family-keyword */
+        font-family: "Font Awesome 6 Pro";
+    }
 }
 
 h1 {
@@ -136,380 +151,6 @@ kbd {
 
 .toastify {
     cursor: unset;
-}
-
-/*
- ================
-    NAVIGATION
- ================
-*/
-
-nav {
-    display: grid;
-    position: fixed;
-    top: 0;
-    right: 0;
-    left: 0;
-    grid-template-columns: 4fr repeat(4, max-content);
-    column-gap: 25px;
-    align-items: center;
-    z-index: 5000;
-    background-color: #1b1e24 !important;
-    padding: 35px 25px;
-    font-size: 20px;
-
-    @media (width <= 600px) {
-        font-size: 16px;
-    }
-}
-
-.nav-shrunk {
-    padding: 15px 25px;
-    font-size: 18px;
-
-    @media (width <= 600px) {
-        font-size: 13px;
-    }
-
-    & .logo {
-        font-size: 23px;
-
-        @media (width <= 600px) {
-            font-size: 16px;
-        }
-    }
-
-    & .logo-tools {
-        font-size: 18px;
-
-        @media (width <= 600px) {
-            font-size: 13px;
-        }
-    }
-}
-
-nav,
-nav * {
-    transition:
-        padding 0.4s ease,
-        font-size 0.4s ease;
-}
-
-.logo {
-    font-weight: bold;
-    font-size: 28px;
-    text-align: left;
-
-    @media (width <= 600px) {
-        font-size: 18px;
-    }
-}
-
-.logo-tools {
-    font-weight: bold;
-    font-size: 22px;
-
-    @media (width <= 600px) {
-        font-size: 13px;
-    }
-}
-
-.search-box {
-    justify-self: end;
-    border: 2px solid #3b3b3f;
-    border-radius: 10px;
-    background-color: #242424;
-    padding: 5px;
-    width: max-content;
-    height: 44px;
-    color: #c5c5cc;
-
-    & .search-button {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        float: right;
-        cursor: pointer;
-        margin: auto;
-        width: 30px;
-        height: 30px;
-        color: #c5c5cc;
-    }
-
-    & .search-text {
-        border: none !important;
-        background-color: #242424 !important;
-        padding: 6px 0 !important;
-        width: 0 !important;
-        color: #c5c5cc !important;
-
-        &::placeholder {
-            color: #c5c5cc;
-        }
-    }
-}
-
-.search-results {
-    display: none;
-    z-index: -100;
-
-    & table {
-        display: block;
-        margin-top: 1px;
-        border: 2px solid #3b3b3f;
-        border-radius: 10px;
-        background-color: #242424;
-        padding: 8px;
-        width: 300px;
-        max-height: 500px;
-        overflow-y: scroll;
-        color: #c5c5cc;
-        font-size: 18px;
-
-        & tr:first-of-type > td {
-            border-top: none;
-            padding-top: 0;
-        }
-
-        & tr:last-of-type > td {
-            padding-bottom: 0;
-        }
-
-        & td {
-            border-top: 2px solid #4c6072;
-            padding-top: 15px;
-            padding-bottom: 15px;
-
-            & .results-title {
-                padding-bottom: 5px;
-                font-size: 20px;
-            }
-
-            & a {
-                color: #4c6072;
-
-                &:hover,
-                &.selected {
-                    color: #364c5f;
-                }
-            }
-        }
-    }
-}
-
-.search-box:hover > .search-text,
-.search-text:focus {
-    box-shadow: none !important;
-    padding: 7px 0 6px 8px !important;
-    width: 249px !important;
-}
-
-.search-box:hover > .search-results,
-.search-text:focus ~ .search-results {
-    display: unset;
-}
-
-.nav-time {
-    justify-self: end;
-    font-weight: bold;
-
-    @media (width <= 600px) {
-        margin-right: 20px;
-    }
-
-    & > #time-icon {
-        margin-left: 2px;
-
-        &.fa-triangle-exclamation {
-            color: #f55;
-        }
-
-        &.fa-sun-bright {
-            color: #ffac33;
-        }
-
-        &.fa-moon-stars {
-            color: wheat;
-        }
-    }
-}
-
-.source {
-    justify-self: end;
-    color: dimgray;
-
-    &:hover {
-        color: #505050;
-    }
-}
-
-#last-commit-info {
-    justify-self: end;
-
-    & code {
-        color: #b4b4b4;
-        font-size: 14px;
-
-        & i {
-            padding-right: 5px;
-        }
-
-        &::after {
-            margin-left: -120px;
-        }
-
-        @media (width <= 600px) {
-            font-size: 12px;
-        }
-    }
-}
-
-/*
- ================
-   FOOTER UTILS
- ================
-*/
-
-.footer-utils {
-    position: fixed;
-    right: 0;
-    bottom: 0;
-    margin: 0;
-    border: none;
-    border-radius: 5px 0 0;
-    background: #31353d;
-    width: 64px;
-    height: 32px;
-    color: whitesmoke;
-    font-size: 18px;
-    text-align: center;
-
-    @media (width <= 600px) {
-        width: 32px;
-    }
-}
-
-#show-shortcuts {
-    position: fixed;
-    right: 0;
-    bottom: 0;
-    margin: 0;
-    border: none;
-    border-radius: 0;
-    background: #31353d;
-    width: 32px;
-    height: 32px;
-    color: whitesmoke;
-    font-size: 18px;
-    text-align: center;
-
-    @media (width <= 600px) {
-        display: none;
-    }
-}
-
-#scroll-to-top {
-    position: fixed;
-    right: 32px;
-    bottom: 0;
-    margin: 0;
-    border: none;
-    border-radius: 5px 0 0;
-    background: #31353d;
-    width: 32px;
-    height: 32px;
-    color: whitesmoke;
-    font-size: 18px;
-    text-align: center;
-
-    @media (width <= 600px) {
-        right: 0;
-    }
-}
-
-#show-shortcuts:hover,
-#scroll-to-top:hover {
-    background: #2b2e35;
-    color: dimgray;
-}
-
-#shortcuts {
-    display: block;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 5000;
-    background-color: rgb(0 0 0 / 40%);
-    padding-top: 200px;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-
-    &.animate-out-top {
-        animation-duration: 0.3s;
-        animation-direction: reverse;
-        animation-name: animate-top;
-        background: none;
-    }
-}
-
-#shortcuts-content {
-    position: relative;
-    animation-duration: 0.4s;
-    animation-name: animate-top;
-    margin: auto;
-    box-shadow:
-        0 4px 8px 0 rgb(0 0 0 / 20%),
-        0 6px 20px 0 rgb(0 0 0 / 18.8%);
-    border: 3px solid #31353d;
-    border-radius: 5px;
-    background-color: #1e2529;
-    padding: 0;
-    width: 30%;
-    min-width: 300px;
-}
-
-@keyframes animate-top {
-    from {
-        top: -300px;
-        opacity: 0;
-    }
-
-    to {
-        top: 0;
-        opacity: 1;
-    }
-}
-
-#shortcuts-header {
-    background-color: #1e2529;
-    padding: 5px 15px;
-    color: whitesmoke;
-    font-size: 22px;
-}
-
-#close-shortcuts {
-    position: absolute;
-    top: 0;
-    right: 10px;
-    cursor: pointer;
-    color: whitesmoke;
-    font-weight: bold;
-    font-size: 28px;
-
-    &:hover,
-    &:focus {
-        color: dimgray;
-        text-decoration: none;
-    }
-}
-
-#shortcuts-list {
-    background-color: #1e2529;
-    padding: 15px;
-    color: whitesmoke;
-    font-size: 18px;
-    line-height: 150%;
 }
 
 /*
@@ -782,170 +423,4 @@ img.emoji {
     @media (width <= 700px) {
         display: initial;
     }
-}
-
-/*
- ================
-      INPUTS
- ================
-*/
-
-textarea {
-    transition: box-shadow 0.1s ease;
-    margin: 0.5rem 0;
-    border: 1px solid #444;
-    border-radius: 4px;
-    background-color: #252525;
-    padding: 0.2rem;
-    width: 40%;
-    height: 6rem;
-    min-height: 4rem;
-    max-height: 16rem;
-    resize: vertical;
-    color: #aaa;
-    font-family: var(--font-family-monospace);
-}
-
-.fakeinput {
-    overflow: scroll;
-    user-select: text;
-    text-align: left;
-}
-
-input:not(input[type="file"], input[type="checkbox"], input[type="color"]),
-.fakeinput {
-    transition: all 0.2s ease;
-    cursor: pointer;
-    border: 1px solid #444;
-    border-radius: 4px;
-    background-color: #252525;
-    padding: 0.2rem 0.3rem;
-    width: 15rem;
-    scrollbar-width: none;
-    color: #aaa;
-    font-size: 0.75rem;
-    font-family: var(--font-family-monospace);
-}
-
-input::-webkit-scrollbar,
-.fakeinput::-webkit-scrollbar {
-    display: none;
-}
-
-input:focus:not(input[type="file"], input[type="checkbox"], input[type="color"]),
-textarea:focus:not(input[type="file"]),
-.fakeinput:focus {
-    outline: none;
-    box-shadow: 0 0 3px 2px lightslategray;
-}
-
-input[type="file"] {
-    display: none;
-}
-
-input[type="color"] {
-    cursor: pointer;
-    border: 1px solid #444;
-    border-radius: 4px;
-    background-color: #252525;
-
-    &:hover {
-        background-color: #2a2a2a;
-    }
-}
-
-select {
-    transition: all 0.2s ease;
-    cursor: pointer;
-    outline: none;
-    box-shadow: none;
-    border: 1px solid #444;
-    border-radius: 4px;
-    background-color: #252525;
-    padding: 0.2rem;
-    width: 8rem;
-    color: #aaa;
-    font-size: 0.75rem;
-    font-family: var(--font-family-monospace);
-}
-
-.file-upload {
-    transition: all 0.2s ease;
-    cursor: pointer;
-    margin: 3px;
-    border: 1px solid #444;
-    border-radius: 4px;
-    background-color: #252525;
-    padding: 0.4rem;
-    width: max-content;
-    height: max-content;
-    color: white;
-    font-weight: normal;
-    font-size: 16px;
-
-    &:hover {
-        transition: all 0.2s ease;
-        background-color: #2b2b2b;
-    }
-}
-
-button:not(.fakeinput) {
-    transition: all 0.2s ease;
-    cursor: pointer;
-    margin: 3px 0;
-    border: 1px solid #444;
-    border-radius: 4px;
-    background-color: #252525;
-    padding: 0.2rem 0.3rem;
-    width: max-content;
-    height: max-content;
-    color: #ddd;
-    font-family: var(--font-family);
-}
-
-button:disabled:not(.fakeinput) {
-    opacity: 0.5;
-    cursor: not-allowed;
-}
-
-button:hover:not(.fakeinput) {
-    background-color: #2a2a2a;
-}
-
-.invisible-input[type="text"]:not(input[type="file"], input[type="checkbox"]),
-.invisible-input[type="number"]:not(input[type="file"], input[type="checkbox"]) {
-    border: none;
-    border-bottom: 1px solid dimgray;
-    border-radius: 0;
-    background-color: transparent;
-    padding-bottom: 0;
-    width: 1.35em;
-    overflow: hidden;
-    color: dimgray;
-    font-weight: 500;
-    font-size: 50px;
-    font-family: var(--font-family);
-    text-align: right;
-}
-
-.invisible-input[type="text"]:focus:not(input[type="file"], input[type="checkbox"]),
-.invisible-input[type="number"]:focus:not(input[type="file"], input[type="checkbox"]) {
-    outline: none;
-    box-shadow: none;
-}
-
-.invisible-input[type="number"]:is(::-webkit-inner-spin-button, ::-webkit-outer-spin-button),
-.no-arrow[type="number"]:is(::-webkit-inner-spin-button, ::-webkit-outer-spin-button) {
-    appearance: none;
-    margin: 0;
-}
-
-input[type="search"]:is(::-ms-clear, ::-ms-reveal) {
-    display: none;
-    width: 0;
-    height: 0;
-}
-
-input[type="search"]:is(::-webkit-search-decoration, ::-webkit-search-cancel-button, ::-webkit-search-results-button, ::-webkit-search-results-decoration) {
-    display: none;
 }
