--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,20 +1,18 @@
 <header>
-    <span class="mainlogo">
+    <div class="mainlogo">
         <span style="color: var(--brand-color-1)">E</span><span style="color: var(--brand-color-2)">e</span><span style="color: var(--brand-color-3)">j</span><span
             style="color: var(--brand-color-4)"
         >i</span><span style="color: var(--brand-color-5)">t</span><span style="color: var(--brand-color-6)">'</span><span style="color: var(--brand-color-7)">s</span>
         <span style="color: var(--brand-color-8)" class="mainlogo-tools">Tools</span>
-    </span>
-    <br />
+    </div>
     <div class="message">
         Welcome to my site! Here are some handy tools I made whilst learning
         <i class="fa-brands fa-html5"></i>
-        <span class="tooltip-bottom" data-tooltip="Hypertext Markup Language">HTML</span>,
+        <span data-tooltip="Hypertext Markup Language">HTML</span>,
         <i class="fa-brands fa-css3-alt"></i>
-        <span class="tooltip-bottom" data-tooltip="Cascading Style Sheets">CSS</span>, and
+        <span data-tooltip="Cascading Style Sheets">CSS</span>, and
         <i class="fa-brands fa-square-js"></i>
         JavaScript!
-        <span class="mobile-only"><br /><br /><a href="/search">Search the site!</a></span>
     </div>
 </header>
 
