--- a/src/views/pages/info/queer-calendar.hbs
+++ b/src/views/pages/info/queer-calendar.hbs
@@ -14,18 +14,7 @@
 
     <button id="reset-date" style="display: block; margin: 10px 0 25px">Set to current date</button>
 
-    <a target="_blank" id="year-overview">View year overview</a>
-    •
-    <a target="_blank" id="year-overview-list">View year overview (list)</a>
+    <a target="_blank" id="year-overview" class="external-link">View year overview (list)</a>
 
-    <div class="color-box">
-        <div class="red"></div>
-        <div class="orange"></div>
-        <div class="yellow"></div>
-        <div class="green"></div>
-        <div class="blue"></div>
-        <div class="purple"></div>
-    </div>
-
-    <span style="font-size: 16px; color: dimgray"><br />Uses the <a href="https://en.pronouns.page/api" target="_blank">pronouns.page API</a></span>
+    <span style="font-size: 16px; color: dimgray"><br />Uses the <a href="https://en.pronouns.page/api" target="_blank" class="external-link">pronouns.page API</a></span>
 </div>
