--- a/src/views/pages/tools/color-info.hbs
+++ b/src/views/pages/tools/color-info.hbs
@@ -43,11 +43,11 @@
     <div>
         <span class="tooltext" style="line-height: 50%; margin-bottom: -5px; display: block">Color Information:</span><br />
         Luminance (relative, see
-        <a href="https://www.w3.org/TR/2008/REC-WCAG20-20081211/#relativeluminancedef" target="_blank">WCAG definition</a>):
+        <a href="https://www.w3.org/TR/2008/REC-WCAG20-20081211/#relativeluminancedef" target="_blank" class="external-link">WCAG definition</a>):
         <input id="luminance" style="width: 4rem" disabled />
         <button id="copy-luminance">Copy</button><br />
         Temperature (Kelvin, estimated, from
-        <a href="https://www.zombieprototypes.com/?p=210" target="_blank">color temperature scale</a>):
+        <a href="https://www.zombieprototypes.com/?p=210" target="_blank" class="external-link">color temperature scale</a>):
         <input id="temperature" style="width: 4rem" disabled />
         <button id="copy-temperature">Copy</button><br />
     </div>
