--- a/src/views/pages/tools/regex-tester.hbs
+++ b/src/views/pages/tools/regex-tester.hbs
@@ -1,9 +1,14 @@
 <div class="tooltext">
     Input:<br />
-    <span style="font-weight: 500; color: dimgray; font-size: 16px"><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Regular_Expressions/Cheatsheet" target="_blank">Regex</a>:
+    <span style="font-weight: 500; color: dimgray; font-size: 16px"><a
+            href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Regular_Expressions/Cheatsheet"
+            target="_blank"
+            class="external-link"
+        >Regex</a>:
         <input id="regex-input" style="width: 320px; max-width: 70%" />　<a
             href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Regular_Expressions#advanced_searching_with_flags"
             target="_blank"
+            class="external-link"
         >Flags</a>:
         <input id="flags-input" value="g" style="width: 4rem" /><br />
         Replace string (leave empty to delete):
