fix: resolve coins-data issues, apod issues, etc.

--- a/src/views/layouts/layout.hbs
+++ b/src/views/layouts/layout.hbs
@@ -76,18 +76,20 @@
             </div>
         </noscript>
         <nav>
-            <a href="/">
-                <span class="logo">
-                    <span style="color: var(--brand-color-1)" data-value="E">E</span><span style="color: var(--brand-color-2)" data-value="e">e</span><span
-                        style="color: var(--brand-color-3)"
-                        data-value="j"
-                    >j</span><span style="color: var(--brand-color-4)" data-value="i">i</span><span style="color: var(--brand-color-5)" data-value="t">t</span><span
-                        style="color: var(--brand-color-6)"
-                        data-value="'"
-                    >'</span><span style="color: var(--brand-color-7)" data-value="s">s</span>
-                    <span style="color: var(--brand-color-8)" class="logo-tools" data-value="Tools">Tools</span>
-                </span>
-            </a>
+            <div>
+                <a href="/">
+                    <span class="logo">
+                        <span style="color: var(--brand-color-1)" data-value="E">E</span><span style="color: var(--brand-color-2)" data-value="e">e</span><span
+                            style="color: var(--brand-color-3)"
+                            data-value="j"
+                        >j</span><span style="color: var(--brand-color-4)" data-value="i">i</span><span style="color: var(--brand-color-5)" data-value="t">t</span><span
+                            style="color: var(--brand-color-6)"
+                            data-value="'"
+                        >'</span><span style="color: var(--brand-color-7)" data-value="s">s</span>
+                        <span style="color: var(--brand-color-8)" class="logo-tools" data-value="Tools">Tools</span>
+                    </span>
+                </a>
+            </div>
             <div class="search-box">
                 <input class="search-text" type="text" placeholder="Search here..." /><i class="search-button fa-solid fa-magnifying-glass"></i><br />
                 <div class="search-results"></div>
